--- a/src/html/style/ns4_toxins.css
+++ b/src/html/style/ns4_toxins.css
@@ -1,93 +1,179 @@
-body, body div, body p, body th, body td, body li, body dl, body dd, input, select, textarea, h3, h4 	{
-	font-family:	Verdana, Lucida, Arial, Helvetica, sans-serif;
-	font-size:	x-small;
-	voice-family:	"\"}\"";
-	voice-family:	inherit;
-	font-size:	small
+/* SoucreCast v1.2 TOXINS STYLE SHEET */
+
+/* SoucreCast - styles start here */
+html body, body div, body p, body th, body td, body li, body dl, body dd, input, select, textarea, .app h3, .app h4 	{
+	font-family:	Verdana, Helvetica, Arial, sans-serif;
 	}
-html>body, html>body div, html>body p, html>body th, html>body td, html>body li, html>body dl, html>body dd, input, select, textarea, h3, h4	{
-	font-size:	small
+	
+html body, body th, body td, textarea, .app h3, .app h4 	{
+	font-size: x-small;
+	voice-family: "\"}\"";
+	voice-family: inherit;
+	font-size: small;
 	}
-p, ul, ol, dl	{
+html>body, html>body th, html>body td, html>body input, html>body select, html>body textarea, html>body .app h3, html>body .app h4	{
+	font-size: x-small;
+	}
+	
+small, div#footer, #leftcol div *, div#login, div#helptext th, div#helptext td, div.tabs th, div.tabs td, input, select {
+	font-size: xx-small !important;
+	line-height: 140%;
+	voice-family: "\"}\"";
+	voice-family: inherit;
+	font-size: x-small !important;
+	}
+html>body small, html>body div#footer, html>body div#leftcol, html>body div#login, html>body div#helptext td, html>body div#helptext th, html>body div.tabs th, html>body div.tabs td, html>body input, html>body select,   {
+	font-size: x-small !important;
+	}
+		
+p, ul, ol, dl {
 	margin-top:	.67em;
 	margin-bottom: .67em;
-	line-height: 1.4
-	}
-a:link, a:visited {
-	color: blue; 
-	}
-a:active, a:hover {
-	color: red;
-	}
-#globalnav { 
-	color: white;
-	padding: 1em;
-	background: #369 url(/scarab/images/logo.gif) no-repeat left;
-	}
-#globalnav p {
-	padding-left: 125px;
-	}
-#globalnav a:link, #globalnav a:visited {
-	color: white;
-	}
-#globalnav a:active {
-	color: red;
-	}
-#globalnav a:hover {
-	color: #e7e7c6;
-	}
-#featurenav, #projnav { 
-	padding: 1em;
-	}
-#featurenav {
-	background: #e7e7c6 url(/scarab/images/bug.gif) no-repeat left;
-	}
-#featurenav p {
-	margin: 0;
-	padding-left: 65px;
-	}
-#featurenav .crumbing {
-	font-weight: bold;
+	line-height: 1.4;
 	}
 table, th, td	{
-	border: none
-	}
-/* .axial th {
-	border-top: 1px solid #999;
-	border-left: 1px solid #999;
-	}
-.app td {
-	border-top: 1px solid #999;
-	border-left: 1px solid #999;
-	}
-.axial td, .datatablechild td {
 	border: none;
-	} */
-h3, .functnbar	{
+	}
+.app h3, .functnbar	{
 	padding: 5px;
 	color: white;
 	background: #369;
+	margin-right: 1px;
+	margin-left: 1px;
+	}
+.app h3 {
+	background: #369 url(/scarab/images/nw_min.gif) no-repeat;
+	}
+.app h4 {	
+	background: #999 url(/scarab/images/nw_min.gif) no-repeat;
+	padding: 5px;
+	color: #fff;
 	margin-right: 2px;
 	margin-left: 2px;
 	}
-.functnbar {
-	padding: 3px;
-	font-weight: bold;
-	background: #000	}
-	
-h3 {	background: #369 url(/scarab/images/nw_min.gif) no-repeat;
-}
-
 code, pre {
-	font-family:	'Andale Mono', monospace;
-	}
-form {
-	margin-top:	0;
-	margin-bottom: 0;
+	font-family: 'Andale Mono', monospace;
 	}
 dt	{
-	font-weight:	bold
+	font-weight: bold;
 	}
-h2, h3, h4	{
+h3, h4	{
 	margin-bottom: 0;
 	}
+h2 {
+	font-size: 16px;
+ 	}
+.mtb { 
+	border-top: solid 1px #ccc;
+	}
+.courtesylinks {
+	margin: 1.5em 0;
+	}
+.docs .toc {
+	border: 1px solid #666;
+	padding: .5em;
+	background: #efefef;
+	}
+.docs .toc h3 {
+	border: none;
+	margin-top: 0;
+	}
+dt	{
+	font-weight: bold;
+	}
+.docs p+p {
+	text-indent: 5%;
+	margin-top: -.67em;
+	}
+ul, ol, dd	{
+	margin-left: 0;
+	padding-left: 5%;
+	}	
+.docs h3, .docs h4 {
+	margin-bottom: .1em;
+ 	}
+.docs h3 {
+	border-top: solid 1px #666; 
+ 	}
+.docs h4 {
+	border-top: solid 1px #ccc; 
+ 	}
+#login {
+	font-weight: bold;
+	color: white;
+	}
+#loginstatus {
+	color: white;
+	}	
+#loginstatus a:link, #loginstatus a:visited {
+	color: white; 
+	text-decoration: underline;
+	}
+#loginstatus a:active, #loginstatus a:hover {
+	color: red;
+	}
+#loginstatus .username {
+	color: white;
+	}
+.username {
+	white-space: nowrap;
+	color: white;
+	}
+#banner {
+	border-top: 1px solid #6699CC;
+	border-bottom: 1px solid #003366;
+	background: #369 url(/scarab/images/logo.gif) no-repeat left;
+	}
+#crumbbar {
+	border-top: 1px solid white;
+	border-bottom: 1px solid #999;
+	}
+.bttn {
+	color: black;
+	}
+#helptext td {
+	background: #ffc;
+	}
+#helptext th {
+	background: #cc9 url(/scarab/images/icon_help.gif) no-repeat right;
+	border-bottom: 1px solid #996;
+	border-right: 1px solid #996;
+	}
+#helptext td {
+	border-bottom: 1px solid #cc9;
+	border-right: 1px solid #cc9;
+	}
+#sidebar td {
+	background: white;
+	}
+#sidebar th {
+	color: white;
+	background: #003366 url(/scarab/images/nw_min.gif) no-repeat;
+	}
+#sidebar td {
+	border: 1px solid #003366;
+	}	
+/* SoucreCast - styles end here */
+
+/* Scarab/App - styles start here */
+.functnbar {
+	background: #666 url(/scarab/images/nw_min.gif) no-repeat top left;
+	}
+.functnbar2 {
+	background: #666 url(/scarab/images/sw_min.gif) no-repeat bottom left;
+	}
+#topmodule {
+	border-top: 1px solid white;
+	border-bottom: 1px solid #999;
+	}
+#tabs { border-bottom: 1em #999 solid }
+#tabs th {
+	background: #999 url(/scarab/images/nw_min.gif) no-repeat top left;
+	border-right: 1px solid #666;
+	}
+#tabs td {
+	background: #ccc url(/scarab/images/nw_min.gif) no-repeat top left;
+	border-bottom: 1px solid #666;
+	border-right: 1px solid #666;
+	}
+/* Scarab/App - styles end here */
