--- a/src/html/style/ns4_toxins.css
+++ b/src/html/style/ns4_toxins.css
@@ -1,31 +1,29 @@
-/* SoucreCast v1.2 TOXINS STYLE SHEET */
+/* SourceCast v1.2 TOXINS STYLE SHEET */
 
-/* SoucreCast - styles start here */
+/* SourceCast - styles start here */
 html body, body div, body p, body th, body td, body li, body dl, body dd, input, select, textarea, .app h3, .app h4 	{
 	font-family:	Verdana, Helvetica, Arial, sans-serif;
 	}
 	
-html body, body th, body td, textarea, .app h3, .app h4 	{
+html body, body th, body td, textarea, .app h3, .app h4, .app pre, .app code 	{
 	font-size: x-small;
 	voice-family: "\"}\"";
 	voice-family: inherit;
 	font-size: small;
 	}
-html>body, html>body th, html>body td, html>body input, html>body select, html>body textarea, html>body .app h3, html>body .app h4	{
-	font-size: x-small;
+html>body, html>body th, html>body td, html>body input, html>body select, html>body textarea, html>body .app h3, html>body .app h4, html>body .app pre, html>body .app code	{
+	font-size: small;
 	}
 	
-small, div#footer, #leftcol div *, div#login, div#helptext th, div#helptext td, div.tabs th, div.tabs td, input, select {
+small, div#footer, div#login, div#helptext th, div#helptext td, div.tabs th, div.tabs td, input, select {
 	font-size: xx-small !important;
-	line-height: 140%;
 	voice-family: "\"}\"";
 	voice-family: inherit;
 	font-size: x-small !important;
 	}
-html>body small, html>body div#footer, html>body div#leftcol, html>body div#login, html>body div#helptext td, html>body div#helptext th, html>body div.tabs th, html>body div.tabs td, html>body input, html>body select,   {
+html>body small, html>body div#footer, html>body div#login, html>body div#helptext td, html>body div#helptext th, html>body div.tabs th, html>body div.tabs td, html>body input, html>body select  {
 	font-size: x-small !important;
 	}
-		
 p, ul, ol, dl {
 	margin-top:	.67em;
 	margin-bottom: .67em;
@@ -37,105 +35,89 @@ table, th, td	{
 .app h3, .functnbar	{
 	padding: 5px;
 	color: white;
-	background: #369;
-	margin-right: 1px;
-	margin-left: 1px;
+	margin-right: 2px;
+	margin-left: 2px;
 	}
+.functnbar {
+	padding: 3px;
+	font-weight: bold;
+	background: #000
+		}
 .app h3 {
 	background: #369 url(/scarab/images/nw_min.gif) no-repeat;
-	}
-.app h4 {	
-	background: #999 url(/scarab/images/nw_min.gif) no-repeat;
+	border-bottom: 1px solid #333;
+	border-right: 1px solid #333;
+ }
+.app h4 {	background: #999 url(/scarab/images/nw_min.gif) no-repeat;
 	padding: 5px;
 	color: #fff;
 	margin-right: 2px;
 	margin-left: 2px;
+	border-bottom: 1px solid #333;
+	border-right: 1px solid #333;
 	}
-code, pre {
-	font-family: 'Andale Mono', monospace;
+.app h3 a, .app h4 a {
+ color: white;
+ text-decoration: underline;
+ }
+.app th {
+	background: #ccc url(/scarab/images/nw_min.gif) no-repeat;
+	}
+#apphead h2 {
+ margin-top: 0;
+ }
+form {
+	margin-top:	0;
+	margin-bottom: 0;
 	}
 dt	{
-	font-weight: bold;
+	font-weight:	bold
 	}
 h3, h4	{
 	margin-bottom: 0;
 	}
-h2 {
-	font-size: 16px;
- 	}
-.mtb { 
-	border-top: solid 1px #ccc;
-	}
+.mtb {
+ border-top: solid 1px #ccc;
+ }
 .courtesylinks {
-	margin: 1.5em 0;
-	}
+ margin: 1.5em 0
+ }
 .docs .toc {
-	border: 1px solid #666;
-	padding: .5em;
-	background: #efefef;
-	}
+ border: 1px solid #666; 
+ padding: .5em; 
+ background: #efefef;
+ }
 .docs .toc h3 {
-	border: none;
-	margin-top: 0;
-	}
+ border: none; 
+ margin-top: 0
+ }
 dt	{
-	font-weight: bold;
+	font-weight:	bold
 	}
 .docs p+p {
 	text-indent: 5%;
-	margin-top: -.67em;
+	margin-top: -.67em
 	}
 ul, ol, dd	{
-	margin-left: 0;
-	padding-left: 5%;
-	}	
+margin-left: 0;
+padding-left: 5%
+}
 .docs h3, .docs h4 {
 	margin-bottom: .1em;
- 	}
+ }
 .docs h3 {
 	border-top: solid 1px #666; 
- 	}
+ }
 .docs h4 {
 	border-top: solid 1px #ccc; 
- 	}
-#login {
-	font-weight: bold;
-	color: white;
-	}
-#loginstatus {
-	color: white;
-	}	
-#loginstatus a:link, #loginstatus a:visited {
-	color: white; 
-	text-decoration: underline;
-	}
-#loginstatus a:active, #loginstatus a:hover {
-	color: red;
-	}
-#loginstatus .username {
-	color: white;
-	}
-.username {
-	white-space: nowrap;
-	color: white;
-	}
+ }
 #banner {
-	border-top: 1px solid #6699CC;
-	border-bottom: 1px solid #003366;
-	background: #369 url(/scarab/images/logo.gif) no-repeat left;
-	}
-#crumbbar {
-	border-top: 1px solid white;
-	border-bottom: 1px solid #999;
-	}
-.bttn {
-	color: black;
-	}
-#helptext td {
-	background: #ffc;
+	border-top: 1px solid #69c;
+	border-left: 1px solid #69c;
+	border-bottom: 2px solid #333;
+	border-right: 1px solid #036;
 	}
 #helptext th {
-	background: #cc9 url(/scarab/images/icon_help.gif) no-repeat right;
 	border-bottom: 1px solid #996;
 	border-right: 1px solid #996;
 	}
@@ -143,17 +125,27 @@ ul, ol, dd	{
 	border-bottom: 1px solid #cc9;
 	border-right: 1px solid #cc9;
 	}
-#sidebar td {
-	background: white;
+ul.tasks {
+ padding-left: 0;
+ margin-left: 0;
+ }
+ul.tasks li {
+ display: inline;
+ padding-right: 2em;
+ }
+.tabs { 
+ border-bottom: 1em #999 solid
+ }
+.tabs th {
+	background: url(/scarab/images/nw_min.gif) no-repeat top left;
+	border-right: 1px solid #666;
 	}
-#sidebar th {
-	color: white;
-	background: #003366 url(/scarab/images/nw_min.gif) no-repeat;
+.tabs td {
+	background: url(/scarab/images/nw_min.gif) no-repeat top left;
+	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #666;
 	}
-#sidebar td {
-	border: 1px solid #003366;
-	}	
-/* SoucreCast - styles end here */
+/* SourceCast - styles end here */
 
 /* Scarab/App - styles start here */
 .functnbar {
@@ -166,12 +158,12 @@ ul, ol, dd	{
 	border-top: 1px solid white;
 	border-bottom: 1px solid #999;
 	}
-#tabs { border-bottom: 1em #999 solid }
-#tabs th {
+.tabs { border-bottom: 1em #999 solid }
+.tabs th {
 	background: #999 url(/scarab/images/nw_min.gif) no-repeat top left;
 	border-right: 1px solid #666;
 	}
-#tabs td {
+.tabs td {
 	background: #ccc url(/scarab/images/nw_min.gif) no-repeat top left;
 	border-bottom: 1px solid #666;
 	border-right: 1px solid #666;
